--- a/corvo/index.html
+++ b/corvo/index.html
@@ -840,6 +840,12 @@
             <span class="material-symbols-outlined">license</span>
             <a href="#">Лицензия</a>
           </p>
+          <p>
+            <span class="material-symbols-outlined"> map </span>
+            <a href="https://witcher3map.com/t/#6/70.141/69.008/w=70.203,67.984"
+              >Мы на карте</a
+            >
+          </p>
         </div>
         <div class="footer-item">
           <h6>Контакты</h6>
