--- a/corvo/index.html
+++ b/corvo/index.html
@@ -840,12 +840,38 @@
             <span class="material-symbols-outlined">license</span>
             <a href="#">Лицензия</a>
           </p>
-          <p>
+          <!-- <p>
             <span class="material-symbols-outlined"> map </span>
             <a href="https://witcher3map.com/t/#6/70.141/69.008/w=70.203,67.984"
               >Мы на карте</a
             >
-          </p>
+          </p> -->
+
+          <h6>Мы на карте</h6>
+          <div class="map" style="position: relative; overflow: hidden">
+            <a
+              href="https://yandex.ru/maps/org/samarskiy_natsionalny_issledovatelskiy_universitet_imeni_akademika_s_p_koroleva/79685268466/?utm_medium=mapframe&utm_source=maps"
+              style="color: #eee; font-size: 12px; position: absolute; top: 0px"
+              >Самарский национальный исследовательский университет имени
+              академика С.П. Королева</a
+            ><a
+              href="https://yandex.ru/maps/51/samara/category/university/184106140/?utm_medium=mapframe&utm_source=maps"
+              style="
+                color: #eee;
+                font-size: 12px;
+                position: absolute;
+                top: 14px;
+              "
+              >ВУЗ в Самаре</a
+            ><iframe
+              src="https://yandex.ru/map-widget/v1/?ll=50.178342%2C53.211712&mode=poi&poi%5Bpoint%5D=50.177553%2C53.212039&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D79685268466&utm_campaign=desktop&utm_medium=search&utm_source=maps&z=18.39"
+              width="560"
+              height="400"
+              frameborder="1"
+              allowfullscreen="true"
+              style="position: relative"
+            ></iframe>
+          </div>
         </div>
         <div class="footer-item">
           <h6>Контакты</h6>
